--- a/config.org
+++ b/config.org
@@ -20,6 +20,7 @@
   - [[#setting-the-font-face][Setting the Font Face]]
   - [[#zooming-inout][Zooming In/Out]]
 - [[#general-keybindings][GENERAL KEYBINDINGS]]
+- [[#behavioral-tweaks][BEHAVIORAL TWEAKS]]
 - [[#graphical-user-interface-tweaks][GRAPHICAL USER INTERFACE TWEAKS]]
   - [[#disable-menubar-toolbars-and-scrollbars][Disable Menubar, Toolbars and Scrollbars]]
   - [[#display-line-numbers-and-truncated-lines][Display Line Numbers and Truncated Lines]]
@@ -193,6 +194,8 @@ Install =luacheck= from your Linux distro's repositories for flycheck to work co
 
 * FONTS
 Defining the various fonts that Emacs will use.
+#+begin_src emacs-lisp
+#+end_src
 
 ** Setting the Font Face
 #+begin_src emacs-lisp
@@ -237,7 +240,7 @@ You can use the bindings CTRL plus =/- for zooming in/out.  You can also use CTR
     :prefix "SPC" ;; set leader
     :global-prefix "M-SPC") ;; access leader in insert mode
 
-  (general-def 'normal 'override
+  (general-mmap 
     "j" 'evil-backward-char
     "k" 'evil-next-line
     "l" 'evil-previous-line
@@ -353,22 +356,33 @@ You can use the bindings CTRL plus =/- for zooming in/out.  You can also use CTR
   (dt/leader-keys
     "w" '(:ignore t :wk "Windows")
     ;; Window splits
-    "w c" '(evil-window-delete :wk "Close window")
+    "w w" '(evil-window-delete :wk "Close window")
     "w n" '(evil-window-new :wk "New window")
-    "w s" '(evil-window-split :wk "Horizontal split window")
+    "w h" '(evil-window-split :wk "Horizontal split window")
     "w v" '(evil-window-vsplit :wk "Vertical split window")
     ;; Window motions
-    "w h" '(evil-window-left :wk "Window left")
-    "w j" '(evil-window-down :wk "Window down")
-    "w k" '(evil-window-up :wk "Window up")
-    "w l" '(evil-window-right :wk "Window right")
-    "w w" '(evil-window-next :wk "Goto next window")
+    "w j" '(evil-window-left :wk "Window left")
+    "w k" '(evil-window-down :wk "Window down")
+    "w l" '(evil-window-up :wk "Window up")
+    "w ñ" '(evil-window-right :wk "Window right")
+    ; "w w" '(evil-window-next :wk "Goto next window")
     ;; Move Windows
-    "w H" '(buf-move-left :wk "Buffer move left")
-    "w J" '(buf-move-down :wk "Buffer move down")
-    "w K" '(buf-move-up :wk "Buffer move up")
-    "w L" '(buf-move-right :wk "Buffer move right"))
+    "w J" '(buf-move-left :wk "Buffer move left")
+    "w K" '(buf-move-down :wk "Buffer move down")
+    "w L" '(buf-move-up :wk "Buffer move up")
+    "w Ñ" '(buf-move-right :wk "Buffer move right"))
 )
+
+#+end_src
+
+* BEHAVIORAL TWEAKS
+#+begin_src emacs-lisp
+
+; Enable automatic symlink following
+(setq vc-follow-symlinks t)
+
+; Cua mode (enabling C-c to copy and C-v to paste)
+(cua-mode t)
 
 #+end_src
 
@@ -385,6 +399,7 @@ Let's make GNU Emacs look a little better.
 ** Display Line Numbers and Truncated Lines
 #+begin_src emacs-lisp
 (global-display-line-numbers-mode 1)
+(setq display-line-numbers-type 'relative)
 (global-visual-line-mode t)
 #+end_src
 
